--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,71 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Scheduling Service</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="stylesheets/home.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+<% layout('layouts/boilerplate')%>
 
-        <div class="auth-buttons">
-          <form action="/login">
-            <button class="btn">Login</button>
-          </form>
-          <form action="">
-            <button class="btn">Register</button>
-          </form>
-          <form action="">
-            <button class="btn">Logout</button>
-          </form>
-        </div>
-      </nav>
-    </header>
-
-    <section id="home" class="hero">
-      <div class="hero-content">
-        <h1>Welcome to Calenlink</h1>
-        <p>Simplify your appointment scheduling process.</p>
-        <button class="btn cta">Get Started</button>
-      </div>
-    </section>
-
-    <footer>
-      <div class="footer-content">
-        <div class="contact-info">
-          <h3>Contact Us</h3>
-          <p>Email: info@example.com</p>
-          <p>Phone: +123-456-7890</p>
-        </div>
-        <div class="social-links">
-          <h3>Follow Us</h3>
-          <a href="#" class="social-icon">Facebook</a>
-          <a href="#" class="social-icon">Twitter</a>
-          <a href="#" class="social-icon">Instagram</a>
-        </div>
-        <div class="newsletter">
-          <h3>Subscribe to Our Newsletter</h3>
-          <form>
-            <input type="email" placeholder="Enter your email" />
-            <button class="btn">Subscribe</button>
-          </form>
-        </div>
-      </div>
-      <div class="copyright">&copy; 2023 Calenlink. All rights reserved.</div>
-    </footer>
-  </body>
-</html>
+<section id="home" class="hero">
+  <div class="hero-content">
+    <h1>Welcome to Calenlink</h1>
+    <p>Simplify your appointment scheduling process.</p>
+    <button class="btn cta">Get Started</button>
+  </div>
+</section>
