--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
   <div class="login-box">
     <!-- Login Form -->
     <form action="">
-      <h2>Login to Your Account</h2>
+      <h2>Login</h2>
 
       <!-- Username Input -->
       <div class="input-container">
