--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,10 +11,10 @@
       <form action="/login">
         <button class="btn">Login</button>
       </form>
-      <form action="">
+      <form action="/register">
         <button class="btn">Register</button>
       </form>
-      <form action="">
+      <form action="/logout">
         <button class="btn">Logout</button>
       </form>
     </div>
