Improved connection of routes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,8 @@
   <div class="hero-content">
     <h1>Welcome to Calenlink</h1>
     <p>Simplify your appointment scheduling process.</p>
-    <button class="btn cta">Get Started</button>
+    <form action="/register">
+      <button class="btn cta">Get Started</button>
+    </form>
   </div>
 </section>
