--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -34,5 +34,10 @@
       <!-- register Button -->
       <button class="btn" type="submit">Register</button>
     </form>
+
+    <div class="forgot-password">
+      <p>Already have an account?</p>
+      <a href="/login">Login</a>
+    </div>
   </div>
 </div>
