--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,7 +4,7 @@
 <div class="login-container">
   <div class="login-box">
     <!-- Login Form -->
-    <form action="">
+    <form action="/login" method="POST">
       <h2>Login</h2>
 
       <!-- Username Input -->
