--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/home.css" />
     <link rel="stylesheet" href="stylesheets/login.css" />
     <link rel="stylesheet" href="stylesheets/register.css" />
+    <link rel="stylesheet" href="stylesheets/scheduledEvents.css" />
   </head>
 
   <body>
